# Web3-Course-Q3-Practice-Sessions

./: README.md
practice sessions/Day 1/FYP-fastapi/: pyproject.toml
practice sessions/Day 1/FYP-fastapi/app/: main.py
practice sessions/Day 2/web-fastapi/: pyproject.toml
practice sessions/Day 2/web-fastapi/webapp/: main.py
