[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["DataXplorerFY <farhanyounas5204@gmail.com>"]
readme = "README.md"




[tool.poetry.scripts]
dev = "webapp.main:start"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
